--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "lbreda/livewire3-notify",
     "description": "Simple Notify binding for Livewire3",
     "type": "library",
-    "license": "GPL-3",
+    "license": "GPL-3.0-or-later",
     "minimum-stability": "stable",
     "require": {
         "php": "^8.2",
